demos/src/css/qi-frontend-demo.css
@font-face {
    font-family: 'Open Sans';
    src:url('../fonts/OpenSans-Regular.ttf');
}

html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

select:focus,
a:focus {
    outline: 0.2rem solid #009688;
}

/* Clearfix courtesy of CSS Tricks http://css-tricks.com/snippets/css/clear-fix/
 */
.clearfix:after {
    visibility: hidden;
    display: block;
    font-size: 0;
    content: " ";
    clear: both;
    height: 0;
}

.layout-small {
    display:inline;
    visibility: visible;
}

.layout-medium {
    display:none;
    visibility: hidden;
}

body {
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
    background-color: #E6E6E6;
    color: #333;
}

header {
    background-color: #fff;
}

.gpii-logo {
    fill: #fff;
    color: #fff;
    background-color: #3D4557;
}

.gpii-logo svg {
    width: 4rem;
    height: auto;
    display: inline-block;
    margin: 0.4rem 0 0 0.4rem;
}

.gpii-logo h1 {
    font-size: 1.2rem;
    font-weight: normal;
    padding: 0.6rem;
    margin: 0;
    display: inline-block;
}

.gpii-demo-nav {
    border-top: 0.1rem solid #3D4557;
    border-bottom: 0.1rem solid #3D4557;
}

header ul {
    list-style: none;
    background-color: #fff;
}

header li {
    float:left;
    display:inline-block;
    padding: 0.5rem;
}

header .gpii-demo-nav-active {
    background-color: #009688;
    color: #fff;
}

.gpii-demo-intro {
    background-color: #fff;
    padding: 1rem;
    line-height: 1.4rem;
}

.gpii-demo-intro h1 {
    margin: 0.6rem 0;
}

.gpii-demo-content {
    padding: 1rem;
}

.gpii-metrics-visibilityControls {
    float:right;
    display: block;
}

.gpii-demo-control {
    font-size: 0.8rem;
    color: #fff;
    width: 4.8rem;
    height: 4.5rem;
    background-color: #009688;
    border-radius: 0.6rem;
    padding: 0.6rem;
    margin: 0 0 1rem 1.2rem;
    text-align: center;
    fill: #fff;
    display: inline-block;
    float: right;
    text-decoration: none;
}

.gpii-demo-control:focus {
    outline:none;
    box-shadow:
        0 0 0 0.2rem #fff,
        0 0 0 0.4rem #009688;

    background-color: #fff;
    color: #009688;
    fill: #009688;
}

.gpii-demo-control-largeGraphs {
    /* Hide the large graphs button on mobile */
    display: none;
    visibility: hidden;
}

.icon {
    height: 1.3rem;
    width: 1.3rem;
    display: block;
    margin: 0 auto;
}

.icon-zoom {
    height: 1.8rem;
    width: 1.8rem;
    margin-top: -0.4rem;
}

.gpii-demo-control.a:hover {
    background-color: #fff;
    color: #009688;
}

.gpii-demo-dataRange form {
    float: right;
    margin-top: 0.5rem;
    margin-bottom: 1rem;
}

/* High Contrast Styles */

body.highContrast {
    background-color: #000;
    color: #000;
}

.highContrast a {
    color: #000;
}

.highContrast select {
    background-color: #fff;
    color: #000;
    border: none;
}

.highContrast select:focus {
    box-shadow:
        0 0 0 0.2rem #000,
        0 0 0 0.4rem #fff;
    outline: none;
}

.highContrast a:focus {
    box-shadow:
        0 0 0 0.2rem #fff,
        0 0 0 0.4rem #000;
    outline: none;
    font-weight: bold;
}

.highContrast .gpii-logo,
.highContrast .gpii-demo-nav-active {
    background-color: #000;
    color: #fff;
}

.highContrast .gpii-demo-content h2,
.highContrast .gpii-demo-control {
    color: #fff;
}

.highContrast .gpii-demo-control {
    background-color: #000;
    border: 0.2rem solid #fff;
}

.highContrast.largeGraphs .gpii-demo-control-largeGraphs,
.highContrast .gpii-demo-control-contrast {
    box-shadow:
        0 0 0 0.2rem #fff,
        0 0 0 0.4rem #000,
        0 0 0 0.6rem #fff;
}

.highContrast .gpii-demo-control:focus {
    box-shadow:
        0 0 0 0.2rem #000,
        0 0 0 0.4rem #fff;

    background-color: #fff;
    color: #000;
    fill: #000;
}

.highContrast text {
    color: #000;
}

/* Large Graphs styles */

.largeGraphs .gpii-demo-control-largeGraphs {
    box-shadow:
        0 0 0 0.2rem #009688,
        0 0 0 0.4rem #E6E6E6,
        0 0 0 0.6rem #009688;
}

@media screen and (min-width: 40em) {
    .gpii-demo-control {
        display:inline-block;
        float:left;
        font-size: 0.8rem;
    }

    .gpii-demo-control-largeGraphs {
        display: inline;
        visibility: visible;
    }
}

